--- a/dynamicUI/styles.css
+++ b/dynamicUI/styles.css
@@ -15,7 +15,7 @@
   cursor: pointer;
 }
 .container.clicked .child {
-  transform: translate(100%, 10%) rotateZ(25deg);
+  transform: rotateZ(135deg);
 }
 .child {
   border-radius: 2rem;
@@ -26,6 +26,17 @@
   align-items: center;
   justify-content: center;
   background-color: lightblue;
-  transition: transform 600ms ease-in-out 100ms;
+  transition: transform 500ms cubic-bezier(0.9, 1.04, 1, 0.48);
   cursor: pointer;
+  transform-origin: 1rem 9rem;
+}
+.container::after {
+  content: '';
+  background-color: black;
+  height: 10px;
+  width: 10px;
+  border-radius: 10px;
+  position: absolute;
+  left: 0.8rem;
+  top: 8.8rem;
 }
