--- a/dynamicUI/styles.css
+++ b/dynamicUI/styles.css
@@ -40,3 +40,67 @@
   left: 0.8rem;
   top: 8.8rem;
 }
+
+.animation__parent {
+  height: 20rem;
+  width: 20rem;
+  border-radius: 40rem;
+  background-color: lightcoral;
+  margin: 0 auto;
+  border-bottom: 1rem solid #000;
+  border-top: 1rem solid #000;
+  animation: rotating0 1000ms ease-in-out 0ms infinite;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.animation__parent:hover {
+}
+.animation__parent:hover .aniamtion__child {
+}
+.animation__child {
+  height: 10rem;
+  width: 10rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: lightseagreen;
+  border-radius: 40rem;
+  border-bottom: 1rem solid #000;
+  border-top: 1rem solid #000;
+  animation: rotating1 500ms ease-in-out 0ms infinite reverse;
+}
+.animation__child:hover {
+}
+@keyframes rotating0 {
+  0% {
+    transform: rotateZ(0deg);
+  }
+  50% {
+    width: 100%;
+    height: 100%;
+    background-color: lightseagreen;
+    opacity: 0;
+  }
+  100% {
+    transform: rotateZ(360deg);
+  }
+}
+@keyframes rotating1 {
+  0% {
+    transform: rotateZ(-360deg);
+  }
+  50% {
+    transform: rotateZ(-180deg);
+    width: 100%;
+    height: 100%;
+    background-color: lightcoral;
+    opacity: 0;
+  }
+  100% {
+    transform: rotateZ(0deg);
+  }
+}
+body {
+  height: 50vh;
+}
